# extreme_robot

./: .gitignore
src/arm_interfaces/: CMakeLists.txt  package.xml
src/arm_interfaces/msg/: DetectedObject.msg
src/arm_interfaces/srv/: ArmDoTask.srv
src/final_pkg/: package.xml  setup.py
src/final_pkg/final_pkg/: CONTROLLER_VS.py  IMU_pub.py  Lidar_final0927.py  arduino_vs.py  auto_drive_code.py  main_code.py  unified_arm_controller.py  vision.py
src/final_pkg/launch/: final.launch.py
src/robot_arm_pkg/: package.xml  setup.cfg  setup.py
src/robot_arm_pkg/robot_arm_pkg/: 0925_arduino_VS.py  arm_server.py  controller_node_pub.py  dynamixel_bus_node.py  dynamixel_manual_mode.py  imu_node.py  manual_publisher.py  missions_robotarm.py  motor_test.py  real_test.py  realsense.py  robot_arm_control_test.py  robot_arm_control_test2.py  robot_arm_sj.py  robotarm.py  robotarm_groupsync.py  serial_test.py  test_opencv.py  unified_arm_controller.py  viewer.html  virtual_camera_test.py  vision.py  vision_arm_client_node.py
src/robot_arm_pkg/robot_arm_pkg/DXL_shield_TXRX/: DXL_shield_TXRX.ino
src/sensor_pkg/: package.xml  setup.py
src/sensor_pkg/sensor_pkg/: imu_e2box_publisher.py  imu_node.py
src/sensor_pkg/sensor_pkg/IMU/: IMU.ino
